Add two more recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza.html">Pizza Recipe</a>
+    <ul>
+   <li> <a href="./recipes/pizza.html">Pizza Recipe</a> </li>
+   <li> <a href="./recipes/ez-tacos.html">Easy Tacos</a> </li>
+   <li> <a href="./recipes/chicken.html">Easy Mediterranean Baked Chicken Breast</a> </li>
+    </ul>
 </body>
 </html>
